# SGUI

./: CMakeLists.txt  README.md  Todo.md  default.json
include/core/: application.h  httpclient.h  widget.h  window.h
include/widget/: button.h
include/window/: main.h  screener.h  settings.h
src/: CMakeLists.txt  main.cpp
src/core/: application.cpp  httpclient.cpp  widget.cpp  window.cpp
src/widget/: button.cpp
src/window/: main.cpp  screener.cpp  settings.cpp
